add two functions

--- a/src/FunctionButtons.css
+++ b/src/FunctionButtons.css
@@ -1,4 +1,5 @@
-/* src/FunctionButtons.css */
+FunctionButtons.css
+
 .button-container {
     display: flex;
     flex-direction: column; /* Change to column layout */
