--- a/src/BMICalculator.css
+++ b/src/BMICalculator.css
@@ -1,31 +1,34 @@
-/* src/BMICalculator.css */
 .bmi-calculator {
-  text-align: center;
-}
-
-button {
-  padding: 8px 12px; /* Adjust padding for smaller buttons */
-  margin: 10px 0; /* Add vertical margin between buttons */
-  border: 1px solid transparent; /* Set a valid border property */
-  border-radius: 10px;
-  background-color: #2a9d8f;
-  color: white;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #21867a; /* Darker shade for hover effect */
+  text-align: center; /* Center align text and content */
+  margin: 40px;
 }
 
 .button-container {
   display: flex; /* Use flexbox to arrange buttons */
   flex-direction: column; /* Arrange buttons in a column */
   justify-content: center; /* Center align buttons */
+  align-items: center; /* Center align buttons horizontally */
   margin-top: 10px; /* Space above the buttons */
+}
+
+button {
+  border: none; /* Set a valid border property */
+  border-radius: 50px; /* Make border-radius more reasonable */
+  background-color: #2a9d8f;
+  color: white;
+  cursor: pointer; /* Change cursor to pointer for buttons */
+  margin: 10px 0; /* Space between buttons */
+  padding: 20px 40px; /* Add padding to the buttons */
+  font-size: 16px; /* Adjust font size for better readability */
+}
+
+button:hover {
+  background-color: #21867a; /* Darker shade for hover effect */
 }
 
 #result {
   margin-top: 20px;
   font-weight: bold;
+  text-align: center;
   color: #2a9d8f;
 }
