--- a/src/Tracker.css
+++ b/src/Tracker.css
@@ -5,8 +5,8 @@ Tracker.css
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  margin: auto;
+  max-width: 500px;
+  margin: 20px;
   text-align: center;
 }
 
@@ -18,11 +18,12 @@ Tracker.css
 label {
   font-size: 14px;
   margin-bottom: 5px;
+  text-align: center ;
   display: block; /* Make label take the full width */
 }
 
 input, select {
-  width: 50%;
+  width: 55%;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -44,10 +45,12 @@ button:hover {
 
 h2 {
   margin-top: 20px;
+  text-align: center;
 }
 
 ul {
   list-style: none;
+  text-align: center;
   padding: 0;
 }
 .error-message {
