--- a/src/Tracker.css
+++ b/src/Tracker.css
@@ -3,7 +3,7 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 100px;
+  max-width: 100p0x;
   margin: auto;
   text-align: center;
 }
